Bug#15904  	--tmpdir requires trailing slash '/'  - Use same code for creating the temptable filename both from "mysql_create_table" and "mysql_create_like_table"

sql/sql_table.cc:
  Move common functionality to crate a temptable name 
  into "build_tmptable_filename", call it both from 
  "mysql_create_table" and "mysql_create_like_table"